--- a/index.html
+++ b/index.html
@@ -1,102 +1,221 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile - Santi Panyanoi</title>
+    <title>โปรไฟล์ - Santi Panyanoi</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background: linear-gradient(135deg, #e3f2fd, #f1f8e9);
             color: #333;
             line-height: 1.6;
         }
 
         header {
-            background-color: #4778af;
+            background: linear-gradient(90deg, #4a90e2, #56ccf2);
             color: white;
-            padding: 20px 0;
+            padding: 40px 0;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 20px;
         }
 
         header h1 {
             margin: 0;
-            font-size: 2.5em;
+            font-size: 3.5em;
+            font-weight: 600;
+            text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
         }
 
         .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
+            max-width: 900px;
+            margin: 40px auto;
+            padding: 30px;
             background: white;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+            border-radius: 15px;
+            overflow: hidden;
+            animation: fadeIn 1.2s ease-in-out;
         }
 
         .profile-info {
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
 
         .profile-info img {
-            width: 150px;
-            height: 150px;
+            width: 180px;
+            height: 180px;
             border-radius: 50%;
-            border: 3px solid #4778af;
+            border: 6px solid #4a90e2;
             margin-bottom: 15px;
+            box-shadow: 0 8px 18px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s, box-shadow 0.3s, border-color 0.3s;
+        }
+
+        .profile-info img:hover {
+            transform: scale(1.1);
+            box-shadow: 0 15px 25px rgba(0, 0, 0, 0.4);
+            border-color: #56ccf2;
         }
 
         .profile-info h2 {
             margin: 10px 0;
-            color: #4778af;
+            color: #4a90e2;
+            font-size: 2.5em;
+            font-weight: 600;
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
         }
 
         .profile-details {
-            font-size: 1.2em;
+            font-size: 1.1em;
+            color: #555;
+            margin-bottom: 30px;
         }
 
-        .profile-details h3 {
-            margin: 10px 0;
+        .profile-details h5 {
+            margin: 15px 0;
+            font-size: 1.2em;
+            font-weight: 400;
+            background: linear-gradient(90deg, #4a90e2, #56ccf2);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .additional-section {
+            margin-top: 30px;
+        }
+
+        .additional-section h3 {
+            color: #4a90e2;
+            font-size: 1.8em;
+            margin-bottom: 15px;
+            text-align: center;
+            text-transform: uppercase;
+        }
+
+        .additional-section p, .additional-section ul {
+            font-size: 1.1em;
+            color: #555;
+            margin: 0 auto 20px;
+            line-height: 1.8;
+            text-align: justify;
+        }
+
+        .additional-section ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .additional-section ul li::before {
+            content: "🔹";
+            color: #4a90e2;
+            margin-right: 10px;
         }
 
         footer {
             text-align: center;
-            padding: 10px;
-            background-color: #4778af;
+            padding: 20px 0;
+            background: linear-gradient(90deg, #4a90e2, #56ccf2);
             color: white;
-            position: relative;
-            bottom: 0;
-            width: 100%;
+            margin-top: 40px;
+            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.15);
         }
 
         footer p {
             margin: 0;
+            font-size: 0.9em;
+            font-weight: 300;
+        }
+
+        /* Keyframes for animation */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2.8em;
+            }
+
+            .container {
+                padding: 20px;
+            }
+
+            .profile-info img {
+                width: 160px;
+                height: 160px;
+            }
+
+            .profile-info h2 {
+                font-size: 2em;
+            }
+
+            .profile-details h5 {
+                font-size: 1.1em;
+            }
+
+            .additional-section h3 {
+                font-size: 1.6em;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>PROFILE</h1>
+        <h1>PROFLIE</h1>
     </header>
 
     <div class="container">
         <div class="profile-info">
-            <img src="https://via.placeholder.com/150" alt="Profile Picture">
-            <h2>MR.Santi Panyanoi</h2>
+            <img src="profile.jpg" alt="Profile Picture">
+            <h2>MR. Santi Panyanoi</h2>
         </div>
 
         <div class="profile-details">
-            <h5>Nickname: Aon</h5>
-            <h5>Student Number: 22</h5>
-            <h5>Classroom: IT.5101</h5>
-            <h5>Student ID: 66309010036</h5>
+            <h5><strong>Nickname:</strong> Aon</h5>
+            <h5><strong>Student Number:</strong> 22</h5>
+            <h5><strong>Classroom:</strong> IT.5101</h5>
+            <h5><strong>Student ID:</strong> 66309010036</h5>
+        </div>
+
+        <div class="additional-section">
+            <h3>เกี่ยวกับฉัน</h3>
+            <p>
+                ฉันเป็นนักศึกษาด้านไอทีที่มีความมุ่งมั่นในการพัฒนาเว็บและเทคโนโลยี ฉันชอบการแก้ปัญหาที่ซับซ้อน,
+                การเรียนรู้ภาษาโปรแกรมใหม่ๆ และติดตามข่าวสารเกี่ยวกับเทคโนโลยีล่าสุดในวงการไอที
+            </p>
+
+            <h3>งานอดิเรกและความสนใจ</h3>
+            <ul>
+                <li>การเขียนโค้ดและพัฒนาเว็บไซต์</li>
+                <li>การออกแบบกราฟิกและศิลปะดิจิตอล</li>
+                <li>การเล่นวิดีโอเกม</li>
+                <li>การสำรวจเทคโนโลยีใหม่ๆ</li>
+            </ul>
+
+            <h3>ข้อมูลติดต่อ</h3>
+            <p>Email: stu66309010036@Gmail.com.com</p>
+            <p>Phone: +66 123 456 789</p>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2024 MR. Santi Panyanoi - All Rights Reserved</p>
+        <p>&copy; 2024 MR. Santi Panyanoi - สงวนลิขสิทธิ์</p>
     </footer>
 </body>
 </html>
