--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <div class="container">
         <div class="profile-info">
-            <img src="profile.jpg" alt="Profile Picture">
+            <img src="profile.png" alt="Profile Picture">
             <h2>MR. Santi Panyanoi</h2>
         </div>
 
