--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
         </div>
 
         <div class="additional-section">
-            <h3>เกี่ยวกับฉัน</h3>
+            <h3>About Me</h3>
             <p>
                 ฉันเป็นนักศึกษาด้านไอทีที่มีความมุ่งมั่นในการพัฒนาเว็บและเทคโนโลยี ฉันชอบการแก้ปัญหาที่ซับซ้อน,
                 การเรียนรู้ภาษาโปรแกรมใหม่ๆ และติดตามข่าวสารเกี่ยวกับเทคโนโลยีล่าสุดในวงการไอที
             </p>
 
-            <h3>งานอดิเรกและความสนใจ</h3>
+            <h3>Hobbies and Interests</h3>
             <ul>
                 <li>การเขียนโค้ดและพัฒนาเว็บไซต์</li>
                 <li>การออกแบบกราฟิกและศิลปะดิจิตอล</li>
@@ -208,7 +208,7 @@
                 <li>การสำรวจเทคโนโลยีใหม่ๆ</li>
             </ul>
 
-            <h3>ข้อมูลติดต่อ</h3>
+            <h3>Contact</h3>
             <p>Email: stu66309010036@Gmail.com.com</p>
             <p>Phone: +66 123 456 789</p>
         </div>
