--- a/index.html
+++ b/index.html
@@ -8,40 +8,47 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
         body {
-            font-family: 'Poppins', Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #e3f2fd, #f1f8e9);
+            background: linear-gradient(to right, #eef2f3, #8e9eab);
             color: #333;
-            line-height: 1.6;
+            overflow-x: hidden;
         }
 
         header {
-            background: linear-gradient(90deg, #4a90e2, #56ccf2);
+            background: linear-gradient(90deg, #6a11cb, #2575fc);
             color: white;
-            padding: 40px 0;
+            padding: 60px 20px;
             text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border-bottom-left-radius: 20px;
             border-bottom-right-radius: 20px;
+            position: relative;
         }
 
         header h1 {
             margin: 0;
             font-size: 3.5em;
-            font-weight: 600;
-            text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
+            font-weight: 700;
+            letter-spacing: 2px;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        header .sub-heading {
+            margin-top: 10px;
+            font-size: 1.2em;
+            font-weight: 300;
+            color: #f0f0f0;
         }
 
         .container {
             max-width: 900px;
-            margin: 40px auto;
-            padding: 30px;
+            margin: 50px auto;
+            padding: 40px;
             background: white;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-            border-radius: 15px;
-            overflow: hidden;
-            animation: fadeIn 1.2s ease-in-out;
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
+            border-radius: 20px;
         }
 
         .profile-info {
@@ -53,50 +60,62 @@
             width: 180px;
             height: 180px;
             border-radius: 50%;
-            border: 6px solid #4a90e2;
-            margin-bottom: 15px;
-            box-shadow: 0 8px 18px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s, box-shadow 0.3s, border-color 0.3s;
+            transition: transform 0.3s, box-shadow 0.3s;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
 
         .profile-info img:hover {
             transform: scale(1.1);
-            box-shadow: 0 15px 25px rgba(0, 0, 0, 0.4);
-            border-color: #56ccf2;
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
         }
 
         .profile-info h2 {
-            margin: 10px 0;
-            color: #4a90e2;
-            font-size: 2.5em;
+            margin: 20px 0 10px;
+            font-size: 2.2em;
             font-weight: 600;
-            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+            color: #2575fc;
+            text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.2);
         }
 
         .profile-details {
-            font-size: 1.1em;
-            color: #555;
+            text-align: center;
             margin-bottom: 30px;
         }
 
         .profile-details h5 {
-            margin: 15px 0;
+            margin: 10px 0;
             font-size: 1.2em;
             font-weight: 400;
-            background: linear-gradient(90deg, #4a90e2, #56ccf2);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: #555;
+        }
+
+        .profile-details h5 span {
+            font-weight: 600;
+            color: #2575fc;
+        }
+
+        .divider {
+            margin: 30px 0;
+            text-align: center;
+        }
+
+        .divider hr {
+            border: none;
+            height: 3px;
+            width: 80%;
+            background: linear-gradient(90deg, #6a11cb, #2575fc);
+            margin: 0 auto;
         }
 
         .additional-section {
-            margin-top: 30px;
+            margin-top: 40px;
         }
 
         .additional-section h3 {
-            color: #4a90e2;
-            font-size: 1.8em;
-            margin-bottom: 15px;
             text-align: center;
+            font-size: 1.8em;
+            color: #2575fc;
+            margin-bottom: 20px;
             text-transform: uppercase;
         }
 
@@ -105,7 +124,6 @@
             color: #555;
             margin: 0 auto 20px;
             line-height: 1.8;
-            text-align: justify;
         }
 
         .additional-section ul {
@@ -113,71 +131,67 @@
             padding: 0;
         }
 
+        .additional-section ul li {
+            margin: 10px 0;
+            font-size: 1.2em;
+            display: flex;
+            align-items: center;
+        }
+
         .additional-section ul li::before {
-            content: "🔹";
-            color: #4a90e2;
+            content: "\2729";
+            color: #6a11cb;
             margin-right: 10px;
+            font-size: 1.5em;
         }
 
         footer {
             text-align: center;
             padding: 20px 0;
-            background: linear-gradient(90deg, #4a90e2, #56ccf2);
+            background: linear-gradient(90deg, #6a11cb, #2575fc);
             color: white;
-            margin-top: 40px;
-            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.15);
+            margin-top: 50px;
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
         }
 
         footer p {
             margin: 0;
             font-size: 0.9em;
-            font-weight: 300;
         }
 
-        /* Keyframes for animation */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Responsive Design */
         @media (max-width: 768px) {
             header h1 {
                 font-size: 2.8em;
             }
 
+            header .sub-heading {
+                font-size: 1em;
+            }
+
             .container {
-                padding: 20px;
+                padding: 30px;
             }
 
             .profile-info img {
-                width: 160px;
-                height: 160px;
+                width: 150px;
+                height: 150px;
             }
 
             .profile-info h2 {
                 font-size: 2em;
             }
 
-            .profile-details h5 {
-                font-size: 1.1em;
-            }
-
             .additional-section h3 {
-                font-size: 1.6em;
+                font-size: 1.5em;
             }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>PROFLIE</h1>
+        <h1>My Profile</h1>
+        <p class="sub-heading">Welcome to my personal space</p>
     </header>
 
     <div class="container">
@@ -187,35 +201,39 @@
         </div>
 
         <div class="profile-details">
-            <h5><strong>Nickname:</strong> Aon</h5>
-            <h5><strong>Student Number:</strong> 22</h5>
-            <h5><strong>Classroom:</strong> IT.5101</h5>
-            <h5><strong>Student ID:</strong> 66309010036</h5>
+            <h5>Nickname: <span>Aon</span></h5>
+            <h5>Student Number: <span>22</span></h5>
+            <h5>Classroom: <span>IT.5101</span></h5>
+            <h5>Student ID: <span>66309010036</span></h5>
+        </div>
+
+        <div class="divider">
+            <hr>
         </div>
 
         <div class="additional-section">
             <h3>About Me</h3>
             <p>
-                ฉันเป็นนักศึกษาด้านไอทีที่มีความมุ่งมั่นในการพัฒนาเว็บและเทคโนโลยี ฉันชอบการแก้ปัญหาที่ซับซ้อน,
+                ฉันเป็นนักศึกษาด้านไอทีที่มีความมุ่งมั่นในการพัฒนาเว็บและเทคโนโลยี ฉันชอบการแก้ปัญหาที่ซับซ้อน, 
                 การเรียนรู้ภาษาโปรแกรมใหม่ๆ และติดตามข่าวสารเกี่ยวกับเทคโนโลยีล่าสุดในวงการไอที
             </p>
 
             <h3>Hobbies and Interests</h3>
             <ul>
-                <li>การเขียนโค้ดและพัฒนาเว็บไซต์</li>
-                <li>การออกแบบกราฟิกและศิลปะดิจิตอล</li>
-                <li>การเล่นวิดีโอเกม</li>
-                <li>การสำรวจเทคโนโลยีใหม่ๆ</li>
+                <li>Coding and web development</li>
+                <li>Graphic design</li>
+                <li>Playing video games</li>
+                <li>Exploring new technologies</li>
             </ul>
 
-            <h3>Contact</h3>
-            <p>Email: stu66309010036@Gmail.com.com</p>
+            <h3>Contact Information</h3>
+            <p>Email: santi.panyanoi@example.com</p>
             <p>Phone: +66 123 456 789</p>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2024 MR. Santi Panyanoi - สงวนลิขสิทธิ์</p>
+        <p>&copy; 2024 MR. Santi Panyanoi - All Rights Reserved</p>
     </footer>
 </body>
 </html>
